# grounded-ai

./: .gitignore  README.md
backend/: .env.example  .gitignore  config.py  database.py  main.py  models.py  pyproject.toml  s3_utils.py  schemas.py  worker.py
backend/agent/: graph.py  nodes.py  retriever.py  state.py
backend/alembic/: env.py
backend/alembic/versions/: 619aea53c1a9_add_collections.py  e5b363df94a0_init_models.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/collections/[id]/: client-page.tsx  loading.tsx  page.tsx
frontend/app/collections/[id]/chat/: client-page.tsx  page.tsx
frontend/app/collections/[id]/eval/: page.tsx
frontend/app/collections/[id]/settings/: client-page.tsx  page.tsx
frontend/app/dashboard/: actions.ts  page.tsx
frontend/app/dashboard/_components/: client-components.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/ui/: accordion.tsx  slider.tsx  switch.tsx  toggle-group.tsx  toggle.tsx
